--- a/Sorpresa.html
+++ b/Sorpresa.html
@@ -63,65 +63,98 @@
     </nav>
 
     <section id="equipos">
-        <h2>Equipos de la Ligue 1</h2>
+        <h2>Cajas Sorpresa</h2>
         <div class="menu-equipos">
-            <a href="#marsella">Marsella</a>
-            <a href="#monaco">Mónaco</a>
-            <a href="#psg">PSG</a>
+            <a href="#fan-version">Versión Fan</a>
+            <a href="#player-version">Versión Player</a>
+            <a href="#retro-version">Versión Retro</a>
         </div>
     </section>
 
     <!-- Sección de productos por equipo -->
     <section id="productos-equipos">
         
-            <!-- Marsella -->
-        <div id="marsella" class="equipo">
-            <h3>Marsella</h3>
+        <!-- Fan Version -->
+        <div id="fan-version" class="equipo">
+            <h3>VERSION FAN</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 90-91.jpeg" alt="Marsella Local 95-96">
-                    <h4>Camiseta Local 90-91</h4>
-                    <p>25€</p>
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas ACTUALES</h4>
+                    <p>75€ - 250€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MARSELLA/HOME 98-99.jpeg" alt="Marsella Local 95-96">
-                    <h4>Camiseta Local 98-99</h4>
-                    <p>25€</p>
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas EUROCOPA</h4>
+                    <p>75€ - 250€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas COPA AMÉRICA</h4>
+                    <p>75€ - 250€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas MIX</h4>
+                    <p>75€ - 250€</p>
                 </div>
             </div>
         </div>
 
-            <!-- Mónaco -->
-        <div id="monaco" class="equipo">
-            <h3>Mónaco</h3>
+        <!-- PLayer Version -->
+        <div id="player-version" class="equipo">
+            <h3>VERSION PLAYER</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/MONACO/HOME 2016-17.webp" alt="Marsella Local 95-96">
-                    <h4>Camiseta Local 16-17</h4>
-                    <p>25€</p>
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas ACTUALES</h4>
+                    <p>81€ - 270€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas EUROCOPA</h4>
+                    <p>81€ - 270€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas COPA AMÉRICA</h4>
+                    <p>81€ - 270€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas MIX</h4>
+                    <p>81€ - 270€</p>
                 </div>
             </div>
         </div>
 
-                <!-- PSG -->
-        <div id="psg" class="equipo">
-            <h3>PSG</h3>
+        <!-- Retro Version -->
+        <div id="retro-version" class="equipo">
+            <h3>VERSION RETRO</h3>
             <div class="productos">
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2001-02.jpeg" alt="PSG Local 95-96">
-                    <h4>Camiseta Local 01-02</h4>
-                    <p>25€</p>
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas EQUIPOS</h4>
+                    <p>81€ - 270€</p>
                 </div>
                 <div class="producto">
-                    <img src="Imagenes/RETRO/LIGUE 1/PSG/HOME 2017-18.jpg" alt="Camiseta PSG Alternativa">
-                    <h4>Camiseta Local 17-18</h4>
-                    <p>25€</p>
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas EUROPA</h4>
+                    <p>81€ - 270€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas AMÉRICA</h4>
+                    <p>81€ - 270€</p>
+                </div>
+                <div class="producto">
+                    <img src="Imagenes/SORPRESA.png" alt="Camiseta Inter Miami">
+                    <h4>PACK 3 - 10 camisetas MIX</h4>
+                    <p>81€ - 270€</p>
                 </div>
             </div>
         </div>
 
-
-    
     </section>
 
     <section id="social-media">
