--- a/OtrasSelecciones.html
+++ b/OtrasSelecciones.html
@@ -57,6 +57,8 @@
                     </div>
                 </ul>
             </li>
+
+            <li><a href="Sorpresa.html">CAJAS SORPRESA</a></li>
         </ul>
     </nav>
 
